add full lib name

--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -67,8 +67,8 @@
         {% resource 'jquery-ui.min.js' '1.12.1' %}
         {% resource 'twitter-bootstrap:bootstrap.min.js' '4.2.1' %}
         {% resource 'owl.carousel.min.js' '2.3.4' %}
-        {% resource 'slicknav.min.js' '1.0.10' %}
-        {% resource 'nicescroll.min.js' '3.7.6' %}
+        {% resource 'SlickNav:slicknav.min.js' '1.0.10' %}
+        {% resource 'jquery.nicescroll:nicescroll.min.js' '3.7.6' %}
         {% resource 'limonte-sweetalert2:sweetalert2.min.js' '10.16.6' %}
         {% resource 'jquery-zoom:jquery.zoom.min.js' '1.7.21' %}
         <script src="/default/js/main.js"></script>
