--- a/src/Template/cup/publication/category/index.twig
+++ b/src/Template/cup/publication/category/index.twig
@@ -37,7 +37,7 @@
                         {% block tbody %}
                             {% for item in list.sortBy('title') %}
                                 <tr>
-                                    <td>{{ item.title }}</td>
+                                    <td>{{ item.title|u.truncate(50, '...') }}</td>
                                     <td width="25%">{{ list.where('uuid', item.parent).first().title ?? '<code>&mdash;</code>'|raw }}</td>
                                     <td width="8%" class="d-none d-md-table-cell text-center" data-order="{{ item.public }}">
                                         {{ item.public ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
