fix en lang gender

--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -165,8 +165,8 @@
                                         } %}
 
                                         <datalist id="unit">
-                                            <option value="Мужской">Мужской</option>
-                                            <option value="Женский">Женский</option>
+                                            <option value="{{ 'Мужской'|locale }}">{{ 'Мужской'|locale }}</option>
+                                            <option value="{{ 'Женский'|locale }}">{{ 'Женский'|locale }}</option>
                                         </datalist>
                                     </div>
                                     <div class="col-md-3">
