--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -731,19 +731,19 @@
                                                 } %}
                                                 {% include 'cup/parameters/field.twig' with {
                                                     'label': 'App ID',
-                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="Требуется внимательная проверка значения!"></i>',
+                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="' ~ ('Требуется внимательная проверка значения!'|locale) ~ '"></i>',
                                                     'type': 'text',
                                                     'name': 'user[auth_facebook_app_id]'
                                                 } %}
                                                 {% include 'cup/parameters/field.twig' with {
                                                     'label': 'App Secret',
-                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="Требуется внимательная проверка значения!"></i>',
+                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="' ~ ('Требуется внимательная проверка значения!'|locale) ~ '"></i>',
                                                     'type': 'text',
                                                     'name': 'user[auth_facebook_app_secret]'
                                                 } %}
                                                 {% include 'cup/parameters/field.twig' with {
                                                     'label': 'Proxy URL',
-                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="Требуется внимательная проверка значения!"></i>',
+                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="' ~ ('Требуется внимательная проверка значения!'|locale) ~ '"></i>',
                                                     'type': 'text',
                                                     'name': 'user[auth_facebook_proxy]',
                                                     'args': {
@@ -765,19 +765,19 @@
                                                 } %}
                                                 {% include 'cup/parameters/field.twig' with {
                                                     'label': 'App ID',
-                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="Требуется внимательная проверка значения!"></i>',
+                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="' ~ ('Требуется внимательная проверка значения!'|locale) ~ '"></i>',
                                                     'type': 'text',
                                                     'name': 'user[auth_vk_app_id]'
                                                 } %}
                                                 {% include 'cup/parameters/field.twig' with {
                                                     'label': 'App Secret',
-                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="Требуется внимательная проверка значения!"></i>',
+                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="' ~ ('Требуется внимательная проверка значения!'|locale) ~ '"></i>',
                                                     'type': 'text',
                                                     'name': 'user[auth_vk_app_secret]'
                                                 } %}
                                                 {% include 'cup/parameters/field.twig' with {
                                                     'label': 'Proxy URL',
-                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="Требуется внимательная проверка значения!"></i>',
+                                                    'postfix': '<i class="fas fa-exclamation-triangle" data-toggle="tooltip" data-placement="top" title="' ~ ('Требуется внимательная проверка значения!'|locale) ~ '"></i>',
                                                     'type': 'text',
                                                     'name': 'user[auth_vk_proxy]',
                                                     'args': {
