--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -234,7 +234,7 @@
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Доп. инфо'|locale,
-                                            'message': 'Можно указать любую информацию до 250 символов.',
+                                            'message': 'Можно указать любую информацию до 250 символов'|locale,
                                             'type': 'textarea',
                                             'name': 'additional',
                                             'args': {
