fix sendpulse secret field type

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -291,7 +291,7 @@
 
                                                         {% include 'cup/parameters/field.twig' with {
                                                             'label': 'Client Secret',
-                                                            'type': 'password',
+                                                            'type': 'text',
                                                             'name': 'sendpulse[secret]',
                                                             'args': {
                                                                 'placeholder': '5d8f75e2ea712abccc5b9bfcc9453acc'
