fix cup user profile

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -92,7 +92,7 @@
                                                 </li>
                                                 <li>
                                                     <div class="dropdown-divider"></div>
-                                                    <a class="dropdown-item" href="/cup/user/{{ user.uuid }}/edit">{{ 'Профиль'|locale }}</a>
+                                                    <a class="dropdown-item" href="/cup/user/{{ user.uuid }}/view">{{ 'Профиль'|locale }}</a>
                                                 </li>
                                                 <li>
                                                     <div class="dropdown-divider"></div>
