fix lang const name

--- a/src/Template/cup/donate.twig
+++ b/src/Template/cup/donate.twig
@@ -1,7 +1,7 @@
 <a href="#btn-modal-donate" rel="modal:open" class="nav-link"><i class="fa fa-donate"></i></a>
 
 <div id="btn-modal-donate" class="modal p-2 text-center">
-    <iframe src="https://getwebspace.github.io/platform-donate/index.{{ _lang }}.html" style="width: 100%; height: 100%; padding: 0; border: 0;"></iframe>
+    <iframe src="https://getwebspace.github.io/platform-donate/index.{{ _language }}.html" style="width: 100%; height: 100%; padding: 0; border: 0;"></iframe>
 </div>
 
 <style>
