--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -3,9 +3,9 @@
 {% block title %}ЦУП CMS{% endblock %}
 
 {% block head %}
-    {% resource 'font-awesome:all.min.css' '5.15.3' %}
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css?v={{ sha }}">
     <link rel="stylesheet" href="/assets/js/plugin/jquery.modal/jquery.modal.min.css?v={{ sha }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
     <link rel="stylesheet" href="/assets/css/atlantis.css?v={{ sha }}">
     <meta name="theme-color" content="#1572e8">
 {% endblock %}
