--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -9,7 +9,7 @@
     <link href="/default/img/favicon.ico" rel="shortcut icon" />
 
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    {% resource 'twitter-bootstrap:bootstrap.min.css' '4.2.1' %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/default/css/style.css">
 
     <!--[if lt IE 9]>
@@ -55,22 +55,21 @@
         <!-- Google Font -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,700,700i">
 
-        {% resource 'font-awesome:all.min.css' '5.15.4' %}
-        {% resource 'jqueryui:jquery-ui.min.css' '1.12.1' %}
-        {% resource 'OwlCarousel2:owl.carousel.min.css' '2.3.4' %}
-        {% resource 'slicknav.min.css' '1.0.10' %}
-        {% resource 'limonte-sweetalert2:sweetalert2.min.css' '10.16.6' %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/slicknav.min.css">
         <link rel="stylesheet" href="/default/css/flaticon.css">
         <link rel="stylesheet" href="/default/css/animate.css">
 
-        {% resource 'jquery.min.js' '3.2.1' %}
-        {% resource 'jquery-ui.min.js' '1.12.1' %}
-        {% resource 'twitter-bootstrap:bootstrap.min.js' '4.2.1' %}
-        {% resource 'owl.carousel.min.js' '2.3.4' %}
-        {% resource 'SlickNav:slicknav.min.js' '1.0.10' %}
-        {% resource 'jquery.nicescroll:nicescroll.min.js' '3.7.6' %}
-        {% resource 'limonte-sweetalert2:sweetalert2.min.js' '10.16.6' %}
-        {% resource 'jquery-zoom:jquery.zoom.min.js' '1.7.21' %}
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/jquery.slicknav.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.17/dist/sweetalert2.all.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-zoom/1.7.21/jquery.zoom.min.js"></script>
         <script src="/default/js/main.js"></script>
 
         {% include 'mixin/img-script.twig' %}
